--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1886,6 +1886,8 @@ lts.fzu.cz/pdf/d-js.pdf
   author={Hill, Mitch},
   year={2013}
 }
+
+% == History ==
 @article{bragg1913reflection,
   title={The reflection of X-rays by crystals},
   author={Bragg, WH and Bragg, WL},
@@ -1904,5 +1906,54 @@ lts.fzu.cz/pdf/d-js.pdf
   year={1913},
   publisher={Wiley Online Library}
 }
+@article{mandelstam1971lectures,
+  title={Lectures on optics, relativity theory and quantum mechanics},
+  author={Mandelstam, LI},
+  journal={Nauka Eds., Moscow, 1972. 440 pp. Under the revision by corresponding member of the Academy of Sciences of USSRSM Rytov.(Russian Title: Lektsii po optike, teorii otnositel'nosti i kvantovoi mehanike)},
+  volume={1},
+  pages={440},
+  year={1971}
+}
+
+@article{shamonina2007metamaterials,
+  title={Metamaterials: How the subject started},
+  author={Shamonina, E and Solymar, L},
+  journal={Metamaterials},
+  volume={1},
+  number={1},
+  pages={12--18},
+  year={2007},
+  publisher={Elsevier}
+}
+@book{schuster1904introduction,
+  title={An introduction to the theory of optics},
+  author={Schuster, Arthur},
+  year={1904},
+  publisher={E. Arnold}
+}
+@article{sivukhin1957energy,
+  title={The energy of electromagnetic waves in dispersive media},
+  author={Sivukhin, DV},
+  journal={Opt. Spektrosk},
+  volume={3},
+  number={308-31},
+  pages={2},
+  year={1957}
+}
+@article{pafomov1956cerenkov,
+  title={Cerenkov radiation in anisotropic ferrites},
+  author={Pafomov, VE},
+  journal={SOVIET PHYSICS JETP-USSR},
+  volume={3},
+  number={4},
+  pages={597--600},
+  year={1956},
+  publisher={AMER INST PHYSICS CIRCULATION FULFILLMENT DIV, 500 SUNNYSIDE BLVD, WOODBURY, NY 11797-2999}
+}
+
+
+
+
+
 
 
