--- a/intro.tex
+++ b/intro.tex
@@ -26,12 +26,12 @@ These deficiencies provide additional reasons to search for the new possibilitie
 
 %}}}
 \section{Goals of the thesis}
+% 0  present an accessible introduction to the topic
 % 1  emphasize the importance of spatial-dispersive electrodynamics
 % 2  put all particular metamaterial systems into a perspective for comparison
 % 3  showcase the Python-MEEP scripts for metamaterial simulation
-% 4  
-% 5
-
+% 4  note that, although many successes have been achieved, all metamaterial application still suffer from fundamental issues as excessive losses and anisotropy
+% 5  stress that the metamaterial and photonic crystal fields should be unified in terminology and approaches
 
 \section{Outline of the chapters}
 \paragraph{Theory} %{{{
