--- a/theory.tex
+++ b/theory.tex
@@ -1042,19 +1042,29 @@ This difference arises from the fact that the behaviour of the structure does no
 \section{Metamaterials and photonic crystals}
 %% XXX XXX XXX 
 \subsection{Historical notes} 
-X-ray scattering on crystals was observed by Max von Laue \cite{friedrich1913interferenzerscheinungen} and explained by W. H. and W. L. Bragg \cite{bragg1913reflection} (Nobel Prize 1915) as a narrow band-gap resulting from constructive interference of the X-rays reflected from the atomic layers.
+\paragraph{Photonic band-gap structures} 
+X-ray scattering on crystals was observed by Max von Laue \cite{friedrich1913interferenzerscheinungen} and explained by W. H. and W. L. Bragg in 1910s \cite{bragg1913reflection} as a narrow band-gap resulting from constructive interference of the X-rays reflected from the atomic layers. The very same principle was later %% when?
+employed for manufacturing of the \textit{dielectric mirrors}. Operating usually in the optical range, the mirrors consist of periodically alternating layers of quarter-wavelength thickness, made of two dielectrics with different wave impedance.  They are widely used, owing to their advantages over classical metallic mirrors such as higher reflectivity and spectral selectivity.
+% related to the \textit{structural colours} found in nature -- who and when did it explain?
+
+\paragraph{Early discussion of media with uncommon parameters} 
+Theoretical investigation on electrodynamics of media posessing negative index of refraction, permittivity or permeability can be traced back \cite{agranovich2006spatial} to early discussions of anomalous dispersion near resonances by Lamb or in a 1904 book from Schuster \cite{schuster1904introduction}. L. I. Mandelshtam's lectures on optics touched predicted negative refraction of light in 1940s \cite{mandelstam1971lectures} and were further complemented in 1950s by Sivukhin's discussion of energy concerns \cite{sivukhin1957energy} and Pafomov's notes about reversed \vCerenkov radiation \cite{pafomov1956cerenkov}. The Veselago's review of the negative-parameter media \cite{veselago1968} from 1968 later received significantly wider attention.
+Note that the theory was developed as the electrodynamics of \textit{homogeneous} media, without assuming microscopic periodicity nor any other way how such a medium should be obtained. 
+
+However, the properties of quasi-periodic structures 
+
+Independently, in the late 19th century, the scientific community resolved the question of how the polarizability of individual atoms in a matter affects the macroscopic permittivity. Except for gases, their mutual interaction is not negligible and the answer formulated as the \textit{Lorentz-Lorenz} (or, \textit{Clausius-Mossoti}) formula is less trivial than might be expected. However, thanks to the atomic size being negligible compared to the optical wavelength, all transparent media were successfully approximated as homogeneous. 
+
+TODO add the blue-green boxes from printed
 
 
 artificial dielectrics, which were already designed in the 1940s for microwave frequencies -- J. Brown, “Artificial dielectrics,” Prog. Dielectr. 2, 193–225 (1960)
 
 
-Independently, the electrodynamics of negative-index homogeneous media was developed by 
-Mandelshtam
-Lamb
-von Laue
-Schuster
-TODO add the blue-green boxes from printed
-independently of periodic structures Veselago in 1968 discusses a *homogeneous* medium with negative index of refraction
+
+The metamaterial field has gained on significant popularity with  
+%\cite{lewis2014review} approximated the number of papers as an exponential, doubling every 3.2 years: D = 2**[(year-1975)/3.2]
+Metamaterials are not limited to electrodynamics; similar concepts are employed also for acoustic waves.
 
 phc ??
 term first used in
@@ -1063,6 +1073,8 @@ mm ??
 term first used in
 
 90's in designing and investigating periodic structures
+
+\cite{shamonina2007metamaterials}
 
 %% Definitions:
 % phc, mm, "electromagnetic materials"
