on unifying mm and phc

--- a/conclusion.tex
+++ b/conclusion.tex
@@ -19,16 +19,10 @@
 \section{Metamaterials -- Critique and alternatives}
 Many different designs of photonic crystals, and in particular, of metamaterials were proposed in the last decades, part of them being aimed at the terahertz range. %They have been also summed by several books and reviews % TODO refs x5
 lacks:
-\\ too specific, no comparison with similar structures, different frequency-spatial scalings of the same
-\\ not covering the area of possible structures
-
-\\ often missing  cricital discussion of excessive losses, slow response etc.
-\\ missing proper electrodynamics
-
 
 TODO TODO At the end, the author would like to express his concern about the efficiency and practical impact of the metamaterial research in the last years. 
 The number of papers related to metamaterials has rocketed in the last decade in almost unprecedented way % todo cite some MM scientometry here
-%\cite{lewis2014review} approximated the number of papers as an exponential, doubling every 3.2 years: D = 2**[(year-1975)/3.2]
+
 , and 
 the hypertrophic number of publications dissolves the concentration of pertinent ideas in almost a homeopatic way.  
 Perhaps anybody interested in MM will soon notice there are many papers adding just a quantitative difference to what was already published, often without stating this important fact. This may give a superficial feeling of an exponential gathering of knowledge, but in fact it mostly contributes to the information noise. 
@@ -48,6 +42,9 @@ Writing these lines, the author is not aware of any readily realized application
 
 To conclude this pessimistic, but well meant section, the author
 }
+
+%% First, reduction of losses by using crystalline metals and/or by introducing optically amplifying materials; developing three-dimensional isotropic designs rather than planar structures; and finding ways of mass producing large-area structures. -- Soukolis in http://eurekalert.org/pub_releases/2007-01/dl-mft010407.php?light
+
 
 %% """ If a too-simplistic physical theory is forced to predict or explain data that are not within its scope,
 %%     it can often do so, but without giving any physical insight. Such a result is not a proof of the theory to be
