--- a/fdphd.bib
+++ b/fdphd.bib
@@ -646,9 +646,6 @@ j%% TODO understand what this is about
 }
 % /*}}}*/
 
-
-
-
 %  -- PhC containing resonators (ad Monsoriu) --/*{{{*/
 @article{laktionov2008,
   title={Mechanism of formation of band gaps in one-dimensional photonic quasi-crystals},
@@ -660,16 +657,7 @@ j%% TODO understand what this is about
   year={2008},
   publisher={Springer}
 }
-% Monsoriu 2006 NonBragg PBG in 1D PhC
-% Chan 2003 PBG from stack of PIM and NIM
-% Jiang 2004 Props of 1D PhC containing SNG
-% Kocaman Panoiu Zero order PBG in NIM PhC in near infrared
-% LGWang 2004 Omnidirectional PBG of 1D PhC with SNG
-% Liang 2003 Unusual narrow bands in LHM stack
-% Panoiu 2006 ZeroN PBG in PhC superlattices
-% YihangChen 2009 Unusual bands of 1D PhC containing SNG
-% Chakrabati 2001 From effective response to PBG
-% Aly 2012 Comparation of 1D diel and metal PhC
+
 
 
 
@@ -716,6 +704,13 @@ j%% TODO understand what this is about
   year={2014},
   publisher={Wiley Online Library}
 }
+@book{brillouin2003wave,
+  title={Wave propagation in periodic structures: electric filters and crystal lattices},
+  author={Brillouin, L{\'e}on},
+  year={2003},
+  publisher={Courier Corporation}
+}
+
 
 
 
@@ -764,10 +759,6 @@ j%% TODO understand what this is about
   year={2009},
   publisher={National Acad Sciences}
 }
-
-
-
-
 
 
 ## TODO new thing, they seem not to have true individual behaviour
@@ -1955,5 +1946,51 @@ lts.fzu.cz/pdf/d-js.pdf
 
 
 
+@article{brown1955properties,
+  title={The properties of artificial dielectrics at centimetre wavelengths},
+  author={Brown, John and Jackson, Willis},
+  journal={Proceedings of the IEE-Part B: Radio and Electronic Engineering},
+  volume={102},
+  number={1},
+  pages={11--16},
+  year={1955},
+  publisher={IET}
+}
+@article{schwartz2003total,
+  title={Total external reflection from metamaterials with ultralow refractive index},
+  author={Schwartz, Brian T and Piestun, Rafael},
+  journal={JOSA B},
+  volume={20},
+  number={12},
+  pages={2448--2453},
+  year={2003},
+  publisher={Optical Society of America}
+}
+@article{brown1953artificial,
+  title={Artificial dielectrics having refractive indices less than unity},
+  author={Brown, John},
+  journal={Proceedings of the IEE-Part IV: Institution Monographs},
+  volume={100},
+  number={5},
+  pages={51--62},
+  year={1953},
+  publisher={IET}
+}
+@article{rotman1962plasma,
+  title={Plasma simulation by artificial dielectrics and parallel-plate media},
+  author={Rotman, Walter},
+  journal={Antennas and Propagation, IRE Transactions on},
+  volume={10},
+  number={1},
+  pages={82--95},
+  year={1962},
+  publisher={IEEE}
+}
 
 
+@techreport{merkel1973simulation,
+  title={Simulation of a simple Lorentz plasma with a random distribution of inductively loaded dipoles},
+  author={Merkel, George},
+  year={1973},
+  institution={DTIC Document}
+}
