--- a/intro.tex
+++ b/intro.tex
@@ -43,7 +43,8 @@ Multiple examples of weak spatial dispersion can be found in natural media, but 
 In the author's opinion, this topic does not receive due attention in most of the literature.
 %% ((( first we build the theory from first principles, and using it we then easier classify the structures)))
 
-The Bloch theorem follows along with its mathematical proof, which enables to adapt the continuum electrodynamics also for waves propagating in periodic structures. 
+The Bloch theorem follows, along with its mathematical proof, which enables to recognize the traits of the continuum electrodynamics also in waves propagating in periodic structures. The impact on the shape of dispersion curves and on the ambiguity of the wave vector is discussed.
+
 The distinction of two widely recognized types of these, namely \textit{metamaterials} and \textit{photonic crystals}, is discussed from different aspects, with an emphasis on that the theoretical approaches used for each field can be unified and used for the other field as well.
 
 %}}}
