merkel on SD of wires

--- a/result.tex
+++ b/result.tex
@@ -60,6 +60,7 @@ ref Homogenisation of nonlocal media such as wires
 \cite{belov2002dispersion}
 \cite{lindell2001bw}
 \cite{silveirinha2005homogenization}
+% nice refs  from 1950-1970: http://ece-research.unm.edu/summa/notes/SSN/note192.pdf
 }
 \add{
 We assume the medium is inductive $\quad \Rightarrow \quad  \varepsilon(f) = 1 - \frac{f_p^2}{f^2}$. 
@@ -117,6 +118,9 @@ Improved cross-shaped pattern for better spectral selectivity \cite{porterfield1
 
 %}}}
 \section{Metallic strips} % references to -> % note about plasmonic particles
+%% (I guess the spatial dispersion will be visible in the CDH plots)
+%% ...even here, with particles infinitesimally thin along the wave-vector, the spatial dispersion may be significant; arguably it was observed in 1970s by Merkel \cite{merkel1973simulation}, who remarks that
+%% "It is interesting that the more exact expressions for the dielectric constant of the artificial dielectric, which considered both the effect of the capacitive dipole impedance and the dipole-dipole interaction, did not model the behavior of a Lorentzian plasma as well as the original simplified approach"
 \section{Metallic strip pair} % references to ->
 \section{Split-ring resonator} % references to ->
 \section{Dielectric sphere} % references to ->				%{{{
