--- a/theory.tex
+++ b/theory.tex
@@ -1042,9 +1042,9 @@ This difference arises from the fact that the behaviour of the structure does no
 \section{Metamaterials and photonic crystals}
 The scientific progress rarely follows a straightforward, efficient way. Making a brief historical review is therefore important to understand the current state of research, and following the reasoning behind it may even help to understand the actual physical theory. 
 
-Moreover, author perceives that the field covered by this thesis is also somewhat burdened by confusion of the terminology: objects denoted simply as \textit{periodic structures} in this text have been denoted in the literature also as \textit{metamaterials}, \textit{photonic crystals}, \textit{photonic materials} or \textit{electromagnetic composites}, \textit{artificial dielectrics} etc. Typically, these terms are used without a proper definition. The issue of terminology is apparently not only a formal one, as it psychologically divides the scientific community and more or less directs the future research.
+Moreover, author perceives that the field covered by this thesis is also somewhat burdened by confusion of the terminology: objects denoted simply as \textit{periodic structures} in this text have been denoted in the literature also as \textit{metamaterials}, \textit{photonic crystals}, \textit{photonic band-gap materials} or \textit{electromagnetic composites}, \textit{artificial dielectrics} etc. Typically, these terms are used without a proper definition, and may or may not overlap in their meaning. An inconsistent terminology is apparently not only a formal issue, as it psychologically divides the scientific community and more or less directs the future research.
 
-Physics, and the fields of photonics in particular, have developed rapidly in the recent decades. It may be useful to note that some of the, seemingly novel, concepts were in fact conceived much longer ago, and that sometimes the different terminology leads to re-invention of already known concepts. 
+Physics, and the fields of photonics in particular, have developed rapidly in the recent decades. It may be useful to note that some of the seemingly novel concepts were in fact conceived much longer ago  \cite[]{klingshirn2007semiconductor}, and that sometimes the mere change in terminology can lead one to disregard, and later painstakingly and expensively re-invent, concepts that were already known. 
 
 The following humble review of the history of metamaterials and photonic crystals is divided into three paradigms that developed independently, and were unified only much later. 
 Although each of the three topics on its own might have seemed to already have given their fruits, it is their \textit{unification} what renewed the scientific interest and pushed the research further.
@@ -1095,6 +1095,8 @@ term first used in
 90's in designing and investigating periodic structures
 
 \cite{shamonina2007metamaterials}
+%% http://www.wave-scattering.com/negative.html
+%% The use of negative refractive medium as a plane-parallel lens (though not yet perfect) has been investigated by R.A. Silin in his article "Possibility of creating plane-parallel lenses", Opt. Spektrosk. 44, 189-191 (1978)
 
 %% Definitions:
 % phc, mm, "electromagnetic materials"
